exercises/networking/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gw
  namespace: gw-demo
spec:
  gatewayClassName: egc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
